Fixed search icon alignment issue on site banner

--- a/scss/components/_banner-search.scss
+++ b/scss/components/_banner-search.scss
@@ -6,6 +6,7 @@
 %banner-search__form,
 .banner-search__form {
   display: block;
+  position: relative;
   width: 100%;
 }
 
